--- a/charts/sequencer-relayer/values.yaml
+++ b/charts/sequencer-relayer/values.yaml
@@ -13,15 +13,12 @@ global:
 images:
   sequencerRelayer:
     repo: ghcr.io/astriaorg/sequencer-relayer
-    tag: "0.11.0"
+    tag: "0.12.0"
     devTag: latest
 
 config:
   relayer:
-    celestiaBearerToken: ""
-    celestiaRpc: http://celestia-service.astria-dev-cluster.svc.cluster.local:26658
-    celestiaAppGrpc: http://celestia-app-service.astria-dev-cluster.svc.cluster.local:9090
-    tokenServer: http://celestia-service.astria-dev-cluster.svc.cluster.local:5353
+    celestiaAppGrpc: ""
     cometbftRpc: ""
     sequencerGrpc: ""
 
@@ -38,7 +35,7 @@ config:
       traceHeaders:
 
   celestiaAppPrivateKey:
-    devContent: "8241386890823ca14743e5d4d583f879a5236af29f454ed4da6fe62b8439e2ab"
+    devContent: ""
     secret:
       filename: "key.hex"
       resourceName: "projects/$PROJECT_ID/secrets/celestiaPrivateKey/versions/latest"
