--- a/charts/sequencer/values.yaml
+++ b/charts/sequencer/values.yaml
@@ -17,11 +17,11 @@ images:
     devTag: v0.38.6
   sequencer:
     repo: ghcr.io/astriaorg/sequencer
-    tag: "0.10.1"
+    tag: "0.11.0"
     devTag: latest
 
 config:
-  moniker: "node0"
+  moniker: "node"
   sequencer:
     authoritySudoAddress: 1c0c490f1b5528d8173c5de46d131160e4b2c0c3
     nativeAssetBaseDenomination: nria
@@ -96,30 +96,30 @@ config:
         devContent:
           priv_key:
             type: tendermint/PrivKeyEd25519
-            value: HGWRtLbV8WLGFgbYhaGyaLe++DC+DBoc7O3bri81vs2ZlpR28IFfQScoO1aNOE/ygs8LIPM9UzLzbaab4VMggQ==
+            value: ""  # can override with a value for local testing
         secret:
           resourceName: "projects/$PROJECT_ID/secrets/privValidatorKey/versions/latest"
       privValidatorKey:
         filename: privValidatorKey.json
         devContent:
           # Ed25519 address of validator
-          address: 091E47761C58C474534F4D414AF104A6CAF90C22
+          address: ""  # can override with a value for local testing
           # public key for the validator address
           pub_key:
             type: tendermint/PubKeyEd25519
-            value: lV57+rGs2vac7mvkGHP1oBFGHPJM3a+WoAzeFDCJDNU=
+            value: ""  # can override with a value for local testing
           # private key for the validator address
           # This is a secret key, should use a secret manager for production deployments
           priv_key:
             type: tendermint/PrivKeyEd25519
-            value: dGOTAweQV8Do9P2n+A8m5EnboDrlxgD3dg4vrYpdIRqVXnv6saza9pzua+QYc/WgEUYc8kzdr5agDN4UMIkM1Q==
+            value: ""  # can override with a value for local testing
         secret:
           resourceName: "projects/$PROJECT_ID/secrets/privValidatorKey/versions/latest"
-    validators:
-      - name: core
-        power: '1'
-        address: 091E47761C58C474534F4D414AF104A6CAF90C22
-        pubKey: lV57+rGs2vac7mvkGHP1oBFGHPJM3a+WoAzeFDCJDNU=
+    validators: []
+      # - name: core
+      #   power: '1'
+      #   address: 091E47761C58C474534F4D414AF104A6CAF90C22
+      #   pubKey: lV57+rGs2vac7mvkGHP1oBFGHPJM3a+WoAzeFDCJDNU=
 
 sequencer-relayer:
   enabled: false
