--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -25,6 +25,7 @@ zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
 axum = { workspace = true }
 base64 = { workspace = true }
 base64-serde = { workspace = true }
+celestia-types = { workspace = true }
 ed25519-consensus = { workspace = true }
 futures = { workspace = true }
 hex = { workspace = true, features = ["serde"] }
@@ -48,41 +49,44 @@ tonic = { workspace = true }
 
 astria-build-info = { path = "../astria-build-info", features = ["runtime"] }
 astria-core = { path = "../astria-core", features = [
+  "celestia",
   "client",
   "serde",
   "brotli",
 ] }
 astria-eyre = { path = "../astria-eyre" }
-celestia-client = { package = "astria-celestia-client", path = "../astria-celestia-client" }
 config = { package = "astria-config", path = "../astria-config" }
 sequencer-client = { package = "astria-sequencer-client", path = "../astria-sequencer-client", features = [
   "http",
 ] }
-telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
+telemetry = { package = "astria-telemetry", path = "../astria-telemetry", features = ["display"] }
 tokio-stream = { workspace = true }
 
 [dev-dependencies]
-async-trait = { workspace = true }
 celestia-mock = { package = "astria-celestia-mock", path = "../astria-celestia-mock" }
 config = { package = "astria-config", path = "../astria-config", features = [
   "tests",
 ] }
 astria-core = { path = "../astria-core", features = ["test-utils", "server"] }
 merkle = { package = "astria-merkle", path = "../astria-merkle" }
-rand_core = { version = "0.6", features = ["getrandom"] }
-reqwest = { workspace = true, features = ["json"] }
-tendermint-rpc = { workspace = true, features = ["http-client"] }
 
+async-trait = { workspace = true }
+celestia-tendermint = { workspace = true }
+celestia-types = { workspace = true }
+hyper = { workspace = true }
 jsonrpsee = { workspace = true, features = ["server"] }
 once_cell = { workspace = true }
+rand_core = { version = "0.6", features = ["getrandom"] }
+reqwest = { workspace = true, features = ["json"] }
 tempfile = { workspace = true }
+tendermint-rpc = { workspace = true, features = ["http-client"] }
 tokio = { workspace = true, features = ["test-util"] }
 tokio-stream = { workspace = true, features = ["net"] }
 wiremock = { workspace = true }
+
 assert-json-diff = "2.0.2"
 tower-http = { version = "0.4", features = ["auth"] }
 tower = { version = "0.4.13" }
-hyper.workspace = true
 
 [build-dependencies]
 astria-build-info = { path = "../astria-build-info", features = ["build"] }
