--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -59,7 +59,9 @@ config = { package = "astria-config", path = "../astria-config" }
 sequencer-client = { package = "astria-sequencer-client", path = "../astria-sequencer-client", features = [
   "http",
 ] }
-telemetry = { package = "astria-telemetry", path = "../astria-telemetry", features = ["display"] }
+telemetry = { package = "astria-telemetry", path = "../astria-telemetry", features = [
+  "display",
+] }
 tokio-stream = { workspace = true }
 
 [dev-dependencies]
