don't push configmap when unused

--- a/charts/sequencer-relayer/templates/configmaps.yaml
+++ b/charts/sequencer-relayer/templates/configmaps.yaml
@@ -39,7 +39,7 @@ data:
   start-relayer.sh: |
     {{- .Files.Get "files/scripts/start-relayer.sh" | nindent 4 }}
 ---
----
+{{- if not .Values.secretProvider.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -49,3 +49,4 @@ data:
   {{ .Values.config.celestiaAppPrivateKey.secret.filename }}: |
     {{ .Values.config.celestiaAppPrivateKey.devContent }}
 ---
+{{- end }}
